--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,3 +5,9 @@
     <li data-id={{this.id}}>{{this.burger_name}}</li>
   {{/each}}
 </ul>
+
+<form action="">
+    <label for="burgerName">Add Burger</label>
+    <input type="text" name="burgerName">
+    <button type="submit">Submit</button>
+</form>
