--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,21 +8,45 @@ body {
     color: #d5cdad;
 }
 
-ul, li {
-    margin: 0;
-    padding: 0;
+.btn {
+    margin: 10px;
 }
 
 .main-content-container {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     margin-top: 100px;
     background-color: rgba(64, 76, 78, 0.6);
+    border-radius: 10px;
+}
+
+.col-title {
+    display: inline-block;
+    border-bottom: 1px solid;
+    padding: 5px;
+}
+
+.new-burger-container {
+    max-width: 500px;
+    margin: 25px auto;
+}
+
+.new-burger-container input {
+    text-align: center;
+}
+
+.new-burger-container label {
+    font-size: 18px;
 }
 
 .burger-name {
     display: inline-block;
     font-size: 22px;
+}
+
+ul, li {
+    margin: 0;
+    padding: 0;
 }
 
 li {
@@ -32,6 +56,8 @@ li {
     align-items: baseline;
 }
 
-.devour-btn {
-    margin: 10px;
+.hidden {
+    display: none;
 }
+
+
